# pension_model

./: .gitignore  CLAUDE.md  Makefile  README.md  issues.md  pyproject.toml
R_model/R_model_txtrs/: run_baseline.R
actuarial_calculations/: winklevoss_formulas.md
baseline_outputs/: admin_af_retire.csv  admin_bt_term.csv  admin_funding.csv  admin_headcount.csv  admin_salary.csv  admin_wf_summary.json  current_amort_layers.csv  drop_funding.csv  eco_funding.csv  eco_headcount.csv  eco_salary.csv  eco_salary_headcount.csv  eco_sep_rate.csv  eso_benefit_data.csv  eso_bt_term.csv  eso_salary_headcount.csv  eso_sep_rate.csv  frs_funding.csv  init_funding_data.csv  input_params.json  judges_af_retire.csv  judges_benefit_data.csv  judges_bt_term.csv  judges_headcount.csv  judges_salary.csv  judges_salary_headcount.csv  judges_sep_rate.csv  regular_funding.csv  regular_headcount.csv  regular_salary_headcount.csv  retiree_distribution.csv  return_scenarios.csv  salary_growth_table.csv  senior_management_af_retire.csv  senior_management_bt_term.csv  senior_management_headcount.csv  senior_management_salary.csv  senior_management_salary_headcount.csv  senior_management_wf_summary.json  special_af_retire.csv  (+7 more)
baseline_outputs/decrement_tables/: admin_normal_retire_rate_tier2.csv  drop_entry_tier1.csv  drop_entry_tier2.csv  early_retirement_tier1.csv  eco_term_rate_avg.csv  eso_early_retire_rate_tier2.csv  judges_term_rate_avg.csv  normal_retirement_tier1.csv  regular_early_retire_rate_tier2.csv  regular_term_rate_avg.csv  (+16 more)
configs/: calibration_params.json
docs/: actuarial_validation_notes.md  appendix.md  architecture_map.md  calibration.md  demo.md  developer.md  discount_rate_scenarios.md  early_retirement_reduction_design.md  frs_scenario_plan  input_prep_workplan.md  integration_status_2026-03-29.md  missing_data_audit.md  model_goals.md  narrative_plan_analysis_template.md  repo_goals.md  runtime_contract_review.md  runtime_input_contract.md  session_summary_2026-03-29.md  txtrs_scenario_plan
memory-bank/: activeContext.md  high_discount_rate_plan.md  issues.md  plan.md
meta-docs/: data_prep_goals.md  pension_math.md  repo_goals.md  workflow.md  writing_style.md
output/: frs_R_truth_table.csv  truth_tables.xlsx  txtrs_R_truth_table.csv
scenarios/: asset_shock.json  high_inflation.json  high_inflation_linked.json  low_return.json
scripts/: convert_frs_to_stage3.py  convert_txtrs_to_stage3.py  extract_baseline.R  extract_ben_decisions.R  extract_benefit_data.R  extract_decrement_tables.py  extract_entrant_profiles.R  extract_funding_inputs.R  extract_liability_data.R  extract_retire_data.R  extract_retire_rates.R  extract_salary_headcount.R  extract_sep_rate.R  extract_sm_headcount.R  generate_separation_tables.py  replicate_r_benefit.py  run_calibrated_validation.py  run_full_workforce_validation.py  run_liability_validation.py  run_model.py  run_r_scenario.R  run_validation.py  run_workforce_validation.py  test_benefit_decision.py  test_equilibrium.py  validate_actuarial.py  validate_benefit_liability.py  validate_projected_liability.py  validate_retire_current.py  validate_total_aal.py  validate_total_liability.py
tests/: __init__.py
(+296 files in other folders)
