[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pension-model"
version = "0.1.0"
description = "A general-purpose pension modeling framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Don Boyd", email = "donboyd5@gmail.com"},
    {name = "Gang Chen", email = "gchen3@albany.edu"},
]
keywords = ["pension", "actuarial", "financial-modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Pension Policy Analysts",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "numba>=0.59.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "pyarrow>=14.0.0",  # parquet I/O for funding-model snapshot regression tests
]
prep = [
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "python-calamine>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/donboyd5/pension_model"
Repository = "https://github.com/donboyd5/pension_model"

[project.scripts]
pension-model = "pension_model.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "invariant: marks tests that verify plan-independent model identities or contracts",
    "regression: marks reviewed-baseline or anti-drift regression tests",
    "snapshot: marks exact snapshot tests used to guard refactors or reviewed outputs",
    "data: marks data or fixture integrity tests",
    "transitional: marks tests tied to the current R-reproduction or migration phase",
    "plan_frs: marks tests primarily tied to the FRS reference plan",
    "plan_txtrs: marks tests primarily tied to the TXTRS reference plan",
]
